Add more information about proposal tables

--- a/example/Demo_make_simlibs.ipynb
+++ b/example/Demo_make_simlibs.ipynb
@@ -11,12 +11,12 @@
     "The following commands can be run from the terminal or from a notebook.\n",
     "\n",
     "## Index<a name=\"index\"></a>\n",
-    "* [Options](#options)\n",
-    "* [Example of usage](#usage)\n",
+    "1. [Options](#options)\n",
+    "2. [Example of usage](#usage)\n",
     "    1. [Download the desired file](#download)\n",
-    "    * [Set up options](#chooseOptions)\n",
-    "    * [Run the script](#run)\n",
-    "    * [Output](#output)\n",
+    "    2. [Set up options](#chooseOptions)\n",
+    "    3. [Run the script](#run)\n",
+    "    4. [Output](#output)\n",
     "\n",
     "## Options<a name=\"options\"></a>\n",
     "\n",
@@ -49,6 +49,9 @@
     "\n",
     "mv baseline_v1.4_10yrs.db Downloads/\n",
     "```\n",
+    "\n",
+    "Note that you need `.db` files with proposal tables, so you might need to ask someone if the most recent files in the above link do not contain these tables.\n",
+    "\n",
     "\n",
     "### 2. Set up options<a name=\"chooseOptions\"></a>\n",
     "\n",
